[package]
name = "groth16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = "0.22"
bellman = { version = "0.13.0", optional = true }
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
bls12_381 = "0.7"
bellman = "0.13.0"

[features]
std = ["bellman"]
default = []
